Fixes to files